MariaDB/mariadb-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: mariadb-vs
  namespace: default
spec:
  hosts:
    - mariadb.default.svc.cluster.local
    - mariadb.127-0-0-1.nip.io
  gateways:
    - istio-system/default
  http:
    - route:
        - destination:
            host: mariadb.default.svc.cluster.local
            port:
              number: 3306
